[package]
name = "orbsim"
version = "0.1.0"
authors = ["toasthunter"]
readme = "README.MD"
description = "A Sun-Earth orbital simulation powered by Piston"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.116.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"